// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Combobox with an error message without crashing 1`] = `
<div
  className="formGroup inline "
>
  
  <label
    className="controlLabel false controlLabelError"
    htmlFor="name"
  >
    Combobox
  </label>
  <div
    className="container"
  >
    <div
      style={Object {}}
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-1"
        autoComplete="off"
        className="formControl false formControlError"
        disabled={false}
        id="name"
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Type m"
        required={true}
        role="combobox"
        style={Object {}}
        type="text"
        value=""
      />
      <div
        id="react-autowhatever-1"
        style={Object {}}
      />
    </div>
    
    <span
      className="error"
    >
      <strong
        className="info"
      >
        An Error
      </strong>
      with useful hints
    </span>
  </div>
</div>
`;

exports[`Renders Combobox without crashing 1`] = `
<div
  className="formGroup inline "
>
  
  <label
    className="controlLabel false "
    htmlFor="name"
  >
    Combobox
  </label>
  <div
    className="container"
  >
    <div
      style={Object {}}
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-1"
        autoComplete="off"
        className="formControl false "
        disabled={false}
        id="name"
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Type m"
        required={true}
        role="combobox"
        style={Object {}}
        type="text"
        value=""
      />
      <div
        id="react-autowhatever-1"
        style={Object {}}
      />
    </div>
    
  </div>
</div>
`;

exports[`Renders notSearchableCombobox without crashing 1`] = `
<div
  className="formGroup inline "
>
  
  <label
    className="controlLabel false "
    htmlFor="name"
  >
    Combobox
  </label>
  <div
    className="container"
  >
    <div
      style={Object {}}
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-1"
        autoComplete="off"
        className="formControl isNotSearchable "
        disabled={false}
        id="name"
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Type m"
        required={true}
        role="combobox"
        style={Object {}}
        type="text"
        value=""
      />
      <div
        id="react-autowhatever-1"
        style={Object {}}
      />
    </div>
    
  </div>
</div>
`;
